--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,13 @@
           {%- endif -%}
         {% endfor -%}
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.github.repository_url }}">Fork me on Github</a>
+          <a class="nav-link" href="/sites/content/publications.html">Publications</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/sites/docs/cv/ian_humphreys_website_cv.pdf">CV</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/sites/content/contact.html">Contact</a>
         </li>
       </ul>
     </div>
