--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,13 +18,13 @@
           {%- endif -%}
         {% endfor -%}
         <li class="nav-item">
-          <a class="nav-link" href="/pages/publications">Publications</a>
+          <a class="nav-link" href="/pages/publications.html">Publications</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/ian_humphreys_cv.pdf">CV</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/contact">Contact</a>
+          <a class="nav-link" href="/pages/contact.html">Contact</a>
         </li>
       </ul>
     </div>
