--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,31 +20,31 @@ $container-max-widths: (
 // Color system
 //
 
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #ecf0f1 !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #b4bcc2 !default;
-$gray-600: #95a5a6 !default;
-$gray-700: #7b8a8b !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
+$white:    #ffffff !default;
+$gray-100: #f1f1f1 !default;
+$gray-200: #e0e0e0 !default;
+$gray-300: #e0e0e0 !default;
+$gray-400: #909090 !default;
+$gray-500: #909090 !default;
+$gray-600: #5b5b5b !default;
+$gray-700: #5b5b5b !default;
+$gray-800: #404040 !default;
+$gray-900: #404040 !default;
 $black:    #000 !default;
 
-$blue:    #2C3E50 !default;
+$blue:    #516d85 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #E74C3C !default;
-$orange:  #fd7e14 !default;
-$yellow:  #F39C12 !default;
-$green:   #18BC9C !default;
-$teal:    #20c997 !default;
+$red:     #a95056 !default;
+$orange:  #bb4924 !default;
+$yellow:  #dab132 !default;
+$green:   #7ca950 !default;
+$teal:    #529fba !default;
 $cyan:    #3498DB !default;
 
 $primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$secondary:     $gray-500 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
