--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
           {%- assign my_page = site.pages | where: "path", path | first -%}
           {%- if my_page.title -%}
           <li class="nav-item">
+            <img src="/images/ian_microscope3.jpg" width="200px" class="rounded-circle float-right">
             <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           </li>
           {%- endif -%}
