--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <img src="/images/ian_microscope3.jpg" class="rounded-circle img-fluid">
+    <img src="/images/ian_microscope3.jpg" class="rounded-circle img-fluid" width="100" height="100">
     <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     </a>
     {%- assign page_paths = site.header_pages -%}
