--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <img src="/images/ian_microscope3.jpg" class="img-fluid rounded-circle" width="100" height="100">
-    <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="navbar-brand" href="#">
+      <img src="/images/ian_microscope3.jpg" class="img-fluid rounded-circle" width="100" height="100">
+      Ian Humphreys
     </a>
     {%- assign page_paths = site.header_pages -%}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
