--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="{{ "/" | relative_url }}"
+    <a class="navbar-brand" href="{{ "/" | relative_url }}">
       <img src="/images/ian_microscope3.jpg" class="img-fluid rounded-circle" width="100" height="100">
       Ian Humphreys
     </a>
