--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="{{ "/" | relative_url }}">
       <img src="/images/ian_microscope3.jpg" class="img-fluid rounded-circle" width="75" height="75">
-      Ian Humphreys
+      "  Ian Humphreys"
     </a>
     {%- assign page_paths = site.header_pages -%}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
