--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
           {%- endif -%}
         {% endfor -%}
         <li class="nav-item">
-          <a class="nav-link" href="/pages/publications.html">Publications</a>
+          <a class="nav-link" href="https://scholar.google.com/citations?hl=en&user=4-eykhcAAAAJ">Publications</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/ian_humphreys_cv.pdf">CV</a>
