--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,12 @@
           {%- endif -%}
         {% endfor -%}
         <li class="nav-item">
+          <a class="nav-link" href="/pages/research.html">Research</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/about.html">About</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="https://scholar.google.com/citations?hl=en&user=4-eykhcAAAAJ">Publications</a>
         </li>
         <li class="nav-item">
