--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,9 @@
           <a class="nav-link" href="https://scholar.google.com/citations?hl=en&user=4-eykhcAAAAJ">Publications</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/pages/resources.html">Resources</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/ian_humphreys_cv.pdf">CV</a>
         </li>
         <li class="nav-item">
