--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -41,8 +41,8 @@ $ipdpurp: #46327E;
 $ipdblue: #5795B2;
 $ipdpink: #A53282;
 
-$primary:       $ipdpurp !default;
-$secondary:     $ipdblue !default;
+$primary:       $ipdblue !default;
+$secondary:     $ipdpurp !default;
 $success:       $ipdpink !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
